feat(bonus): add functionality to use pin to edit and save the destination url of a hash url
- add new edit form and view
- change home view to more descriptive name
- add a link to the edit view from the home (create) form

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,8 @@
         </div>
         {% endif %} -->
 
-        <div class="py-4 text-center tracking-wide text-2xl font-bold">Generate a random short url or provide a custom hash.</div>
+        <div class="pt-4 text-center tracking-wide text-2xl font-bold">Generate a random short url or provide a custom hash.</div>
+        <div class="pb-4 text-center tracking-wide font-bold">Have a pin? Edit your short url <a href="/edit" class="text-blue-600">here</a></div>
 
         <form method="post" class="flex flex-col justify-between">
             {% csrf_token %}
